Update and rename test 1.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
 	<body>
 	<h1>The story of my life<h1>
-	<h3><h2>Hello!</h2> welcome to my website, im gonna take you to a \n story of my life </h3>
+	<h3><big>Hello!</big> welcome to my website, im gonna take you to a story of my life </h3>
 	</body>
 </html>
