--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
 	<body>
 	<h1>The story of my life<h1>
-	<h3><big>Hello!</big> welcome to my website, im gonna take you to a story of my life </h3>
+	<h2>Hello! welcome to my website, im gonna take you to a story of my life </h2>
 	</body>
 </html>
