--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 ## the title
   <head>
-  <link rel="stylesheet" type="text/css" href="mystyle.css">
+  @import url("stylesheetB.css");
   <h1>My story begin</h1>
   h1{
   color:#cccccc;
