--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			margin-left: 50px;
 		}
 		.bg{
-			background: src=" C:\Users\jacob_000\Desktop\About me Accelerate\18489891_10203354563740723_7422676689686944252_o.jpg";
+			background: url("");
 			height: 100%;
 			background-position: center;
 			background-repeat: no-repeat;
