--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			margin-left: 50px;
 		}
 		.bg{
-			background: url("");
+			background: url("IMG_20180117_164533.jpg");
 			height: 100%;
 			background-position: center;
 			background-repeat: no-repeat;
